--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "nodemailer": "^6.4.16"
   }
 }
